[package]
name = "icmp_net_check"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winping = "0.10.1"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
#env_logger = "0.9.0"
chrono = "0.4"